# codice_fiscale

./: Cargo.toml  README.md  belfiore.txt
src/: belfiore.rs  cfstatics.rs  error.rs  lib.rs  utils.rs
tests/: basic.rs
