[package]
name = "codice_fiscale"
description = "Tools to calculate and verify Italian codice fiscale"
version = "0.3.2-alpha.0"
edition = "2018"
authors = ["Michele Beltrame <mb@italpro.net>", "Eugenio Tampieri <eugenio@eutampieri.eu>"]
repository = "https://github.com/lordarthas/codice_fiscale"
keywords = ["codice", "fiscale", "business", "fiscal", "italy"]
categories = ["algorithms", "parsing"]
license = "MIT"
readme = "README.md"

[dependencies]
failure = "0.1.8"
lazy_static = "1.4.0"
time = "0.1.40"
regex = "1.3.9"
