[package]
name = "codice_fiscale"
description = "Tools to calculate and verify Italian codice fiscale"
version = "0.4.1"
edition = "2018"
authors = ["Michele Beltrame <mb@italpro.net>", "Eugenio Tampieri <eugenio@eutampieri.eu>"]
repository = "https://github.com/lordarthas/codice_fiscale"
keywords = ["codice", "fiscale", "business", "fiscal", "italy"]
categories = ["algorithms", "parsing"]
license = "MIT"
readme = "README.md"

[dependencies]
lazy_static = "1.4.0"
time = {version = "0.3.14", features=["parsing", "macros"]}
regex = "1.7"
